feature(TIME001): fix gitignore file, added reportsView for admins, adjusted test files and added some test cases, adjusted ci cd pipeline for github actions test